--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,6 +13,15 @@
         tools:context=".ui.ui.profile.ProfileFragment"
         >
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:background="@drawable/baseline_login_24"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:id="@+id/Logout"/>
+
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txt_id"
             android:layout_width="wrap_content"
