--- a/app/src/main/res/layout/activity_my_addresses.xml
+++ b/app/src/main/res/layout/activity_my_addresses.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/frogetpassword_page_background"
-    tools:context=".ui.ui.myaddress.MyAddresses">
+    tools:context=".ui.ui.profile.myaddress.MyAddresses">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_add_new_address"
