--- a/app/src/main/res/layout/filters_bottom_sheet.xml
+++ b/app/src/main/res/layout/filters_bottom_sheet.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:hardwareAccelerated="true"
     android:orientation="vertical">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,41 +15,31 @@
         android:layout_marginEnd="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_5sdp"
         android:textAlignment="viewEnd"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Colors"
+        android:text="Type"
         android:textSize="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_5sdp"
         />
 
-    <co.ceryle.radiorealbutton.RadioRealButtonGroup
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:rrbg_animateDrawables_enter="overshoot"
-        app:rrbg_animateTexts_enter="overshoot"
-        app:rrbg_dividerColor="@color/black"
-        app:rrbg_dividerSize="1dp"
-        app:rrbg_radius="10dp"
-        android:id="@+id/group"
-        app:rrbg_selectorColor="@color/Secondary"
-        app:rrbg_selectorSize="6dp">
 
-    </co.ceryle.radiorealbutton.RadioRealButtonGroup>
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:id="@+id/group"
+                android:orientation="horizontal"
+                >
 
-    <co.ceryle.radiorealbutton.RadioRealButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:rrb_drawable="@drawable/custom_edit_text"
-        app:rrb_drawableHeight="36dp"
-        app:rrb_drawablePadding="8dp"
-        app:rrb_drawableWidth="36dp"
-        app:rrb_drawableTint="@color/Green"
-        app:rrb_ripple="true"
-        android:id="@+id/button5"
-        app:rrb_rippleColor="@color/black"
-        app:rrb_text="Green"
-        android:visibility="gone"
-        app:rrb_textColor="@color/black"/>
+            </RadioGroup>
+        </HorizontalScrollView>
+
 
 </LinearLayout>
