--- a/app/src/main/res/layout/filters_bottom_sheet.xml
+++ b/app/src/main/res/layout/filters_bottom_sheet.xml
@@ -25,7 +25,7 @@
         />
 
 
-        <HorizontalScrollView
+    <HorizontalScrollView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             >
@@ -34,12 +34,36 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginBottom="@dimen/_5sdp"
-                android:id="@+id/group"
+                android:id="@+id/type_group"
                 android:orientation="horizontal"
                 >
 
             </RadioGroup>
         </HorizontalScrollView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Color"
+        android:textSize="@dimen/_20sdp"
+        android:layout_marginStart="@dimen/_5sdp"
+        />
+
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:id="@+id/color_group"
+            android:orientation="horizontal"
+            >
+
+        </RadioGroup>
+    </HorizontalScrollView>
 
 
 </LinearLayout>
