--- a/app/src/main/res/layout/activity_order_qty.xml
+++ b/app/src/main/res/layout/activity_order_qty.xml
@@ -16,21 +16,6 @@
         android:visibility="visible"
         >
 
-        <TextView
-            android:id="@+id/txt_removeall"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="@dimen/_200sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:fontFamily="@font/coda"
-            android:text="Remove All"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_16sdp" />
-
-
         <ImageView
             android:id="@+id/image_view_carticon"
             android:layout_width="@dimen/_50sdp"
@@ -46,16 +31,16 @@
 
         <TextView
             android:id="@+id/CART_TEXT"
-            android:layout_width="@dimen/_200sdp"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/_50sdp"
             android:layout_below="@id/image_view_carticon"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/_10sdp"
             android:fontFamily="@font/coda"
-            android:text="My Orders Qauntity"
+            android:text="My Orders Quantity"
             android:textAlignment="center"
             android:textColor="#00B5FF"
-            android:textSize="@dimen/_36sdp" />
+            android:textSize="@dimen/_32sdp" />
 
     </RelativeLayout>
 
