--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -42,18 +42,18 @@
         app:srb_starHeight="@dimen/_15sdp"
         app:srb_starPadding="@dimen/_3sdp"
         app:srb_stepSize="0.01"
-        app:srb_isIndicator="false"
-        android:clickable="true"
+        app:srb_isIndicator="true"
         app:srb_clickable="true"
         app:srb_drawableEmpty="@drawable/outline_star_outline_24"
-        app:srb_drawableFilled="@drawable/star_vector">
+        app:srb_drawableFilled="@drawable/star_vector"
+        >
     </com.willy.ratingbar.RotationRatingBar>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ProductImagePager"
-        android:text="4000"
+        android:text=""
         android:layout_marginEnd="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_5sdp"
         android:textSize="@dimen/_10sdp"
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:layout_below="@id/ProductImagePager"
-        android:text="Product Name"
+        android:text=""
         android:layout_marginStart="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:textStyle="bold"
@@ -109,7 +109,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:layout_below="@id/ProductName"
-        android:text="Product Description"
+        android:text=""
         android:layout_marginStart="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:id="@+id/ProductDescription"
@@ -120,7 +120,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:layout_below="@id/ProductDescription"
-        android:text="₹3500"
+        android:text="₹"
         android:layout_marginStart="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:textStyle="bold"
@@ -132,7 +132,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/Grey"
         android:layout_below="@id/CurrentPrice"
-        android:text="M.R.P ₹3500"
+        android:text="M.R.P ₹"
         android:layout_marginStart="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:id="@+id/MRPPrice"
@@ -144,7 +144,7 @@
         android:textColor="#017612"
         android:layout_below="@id/MRPPrice"
         android:drawableStart="@drawable/baseline_location_on_24"
-        android:text="Deliver to Paradox- Hyderabad 500065"
+        android:text=""
         android:layout_marginStart="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:id="@+id/ProductDeleveryAddress"
