--- a/app/src/main/res/layout/filters_bottom_sheet.xml
+++ b/app/src/main/res/layout/filters_bottom_sheet.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Reset"
+        android:id="@+id/ResetFilter"
         android:textColor="@color/Primary_less"
         android:textSize="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_5sdp"
