--- a/app/src/main/res/layout/activity_my_payments.xml
+++ b/app/src/main/res/layout/activity_my_payments.xml
@@ -6,7 +6,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ui.profile.mypayments.MyPaymentsActivity">
+    tools:context=".ui.ui.profile.mypayments.MyPaymentsActivity"
+    android:background="@drawable/wishlist_background">
 
     <RelativeLayout
         android:id="@+id/my_payments_RelativeLayout"
@@ -15,19 +16,6 @@
         android:visibility="visible"
         >
 
-        <TextView
-            android:id="@+id/txt_removeall"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="@dimen/_200sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:fontFamily="@font/coda"
-            android:text="Remove All"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_16sdp" />
 
 
         <ImageView
